@@ -2,7 +2,6 @@ package com.celements.model.access;
 
 import static com.celements.common.test.CelementsTestUtils.*;
 import static com.celements.model.classes.TestClassDefinition.*;
-import static com.google.common.collect.ImmutableList.*;
 import static java.util.stream.Collectors.*;
 import static org.easymock.EasyMock.*;
 import static org.junit.Assert.*;
@@ -14,6 +13,7 @@ import java.util.Date;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.stream.Stream;
 
 import org.easymock.Capture;
@@ -29,8 +29,8 @@ import org.xwiki.bridge.event.DocumentUpdatingEvent;
 import org.xwiki.configuration.ConfigurationSource;
 import org.xwiki.model.reference.DocumentReference;
 import org.xwiki.model.reference.EntityReference;
+import org.xwiki.model.reference.WikiReference;
 import org.xwiki.observation.ObservationManager;
-import org.xwiki.rendering.syntax.Syntax;
 
 import com.celements.auth.user.UserService;
 import com.celements.common.test.AbstractComponentTest;
@@ -55,14 +55,15 @@ import com.celements.model.reference.RefBuilder;
 import com.celements.model.util.ClassFieldValue;
 import com.celements.rights.access.EAccessLevel;
 import com.celements.rights.access.IRightsAccessFacadeRole;
+import com.celements.store.DelegateStore;
 import com.celements.rights.access.exceptions.NoAccessRightsException;
 import com.celements.store.ModelAccessStore;
-import com.google.common.base.Optional;
-import com.google.common.collect.ImmutableList;
+import com.celements.wiki.WikiService;
 import com.xpn.xwiki.XWikiException;
 import com.xpn.xwiki.api.Document;
 import com.xpn.xwiki.doc.XWikiAttachment;
 import com.xpn.xwiki.doc.XWikiDocument;
+import com.xpn.xwiki.doc.CelDocument;
 import com.xpn.xwiki.objects.BaseObject;
 import com.xpn.xwiki.objects.BaseProperty;
 import com.xpn.xwiki.objects.classes.BaseClass;
@@ -84,7 +85,7 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
   @Before
   public void prepareTest() throws Exception {
     registerComponentMocks(XWikiRecycleBinStoreInterface.class, ObservationManager.class,
-        IRightsAccessFacadeRole.class, UserService.class);
+        IRightsAccessFacadeRole.class, UserService.class, WikiService.class);
     registerComponentMock(XWikiDocumentCreator.class, "default", new TestXWikiDocumentCreator());
     registerComponentMock(ConfigurationSource.class, "all", getConfigurationSource());
     registerComponentMock(ConfigurationSource.class, CelementsFromWikiConfigurationSource.NAME,
@@ -94,44 +95,66 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
     getConfigurationSource().setProperty(ModelContext.CFG_KEY_DEFAULT_LANG, "en");
     doc = new XWikiDocument(new DocumentReference("db", "space", "doc"));
     doc.setDefaultLanguage(getConfigurationSource().getProperty(ModelContext.CFG_KEY_DEFAULT_LANG));
-    doc.setSyntax(Syntax.XWIKI_1_0);
     doc.setMetaDataDirty(false);
-    storeMock = createMockAndAddToDefault(XWikiStoreInterface.class);
-    doc.setStore(storeMock);
     doc.setNew(false);
     doc.setOriginalDocument(new XWikiDocument(doc.getDocumentReference()));
     doc.getOriginalDocument().setNew(false);
-    ModelAccessStore modelAccessStoreMock = createMockAndAddToDefault(ModelAccessStore.class);
-    registerComponentMock(XWikiStoreInterface.class, ModelAccessStore.NAME, modelAccessStoreMock);
+    storeMock = createDefaultMock(XWikiStoreInterface.class);
+    DelegateStore backingStore = new DelegateStore() {
+
+      @Override
+      protected String getName() {
+        return "testBacking";
+      }
+
+      @Override
+      public XWikiStoreInterface getBackingStore() {
+        return storeMock;
+      }
+
+      @Override
+      public Optional<CelDocument> loadCelDocument(
+          DocumentReference docRef, String language) throws XWikiException {
+        XWikiDocument document = new XWikiDocument(docRef);
+        document.setLanguage(language);
+        return Optional.of(storeMock.loadXWikiDoc(document, getXContext()))
+            .filter(loadedDocument -> !loadedDocument.isNew())
+            .map(CelDocument::from);
+      }
+    };
+    ModelAccessStore mainStore = createDefaultMock(ModelAccessStore.class);
+    registerComponentMock(XWikiStoreInterface.class, ModelAccessStore.NAME, mainStore);
+    expect(mainStore.getBackingStore()).andReturn(backingStore).anyTimes();
     getConfigurationSource().setProperty("celements.store.main", ModelAccessStore.NAME);
-    expect(modelAccessStoreMock.getBackingStore()).andReturn(storeMock).anyTimes();
     getConfigurationSource().setProperty("celements.store.recyclebin.enabled", "1");
     getConfigurationSource().setProperty("celements.store.recyclebin.hint", "default");
     classRef = new DocumentReference("db", "class", "any");
     classRef2 = new DocumentReference("db", "class", "other");
     // important for unstable-2.0 set database because class references are checked for db
-    getContext().setDatabase("db");
-    getContext().setUser("user");
+    getXContext().setDatabase("db");
+    getXContext().setUser("user");
     modelAccess = (DefaultModelAccessFacade) Utils.getComponent(IModelAccessFacade.class);
+    expect(getMock(WikiService.class).hasWiki(new WikiReference("db")))
+        .andReturn(true).anyTimes();
   }
 
   @Test
   public void test_getDocument() throws Exception {
     doc.setFromCache(false);
-    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getContext()))).andReturn(doc);
+    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getXContext()))).andReturn(doc);
     replayDefault();
     XWikiDocument ret = modelAccess.getDocument(doc.getDocumentReference());
     verifyDefault();
     assertEquals(doc, ret);
     assertFalse(ret.isNew());
     assertFalse(ret.isFromCache());
-    assertSame("do not clone if isNew", doc, ret);
+    assertNotSame(doc, ret);
   }
 
   @Test
   public void test_getDocument_failed() throws Exception {
     Throwable cause = new XWikiException();
-    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getContext()))).andThrow(cause);
+    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getXContext()))).andThrow(cause);
     replayDefault();
     try {
       modelAccess.getDocument(doc.getDocumentReference());
@@ -145,7 +168,7 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
   @Test
   public void test_getDocument_notExists() throws Exception {
     doc.setNew(true);
-    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getContext()))).andReturn(doc);
+    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getXContext()))).andReturn(doc);
     replayDefault();
     try {
       modelAccess.getDocument(doc.getDocumentReference());
@@ -170,15 +193,14 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
   public void test_getDocument_cloneFromCache() throws Exception {
     String lang = "";
     doc.setDefaultLanguage("");
-    doc.setLanguage("");
+    doc.setLanguage(lang);
     doc.setFromCache(true);
-    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getContext()))).andReturn(doc);
+    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getXContext()))).andReturn(doc);
     replayDefault();
     XWikiDocument theDoc = modelAccess.getDocument(doc.getDocumentReference(), lang);
     verifyDefault();
     assertNotSame(doc, theDoc);
-    assertSame("docRef clone is not required anymore due to immutable DocumentReference",
-        doc.getDocumentReference(), theDoc.getDocumentReference());
+    assertEquals(doc.getDocumentReference(), theDoc.getDocumentReference());
   }
 
   @Test
@@ -189,12 +211,12 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
     mainDoc.setDefaultLanguage("");
     doc.setLanguage(lang);
     getConfigurationSource().setProperty(ModelContext.CFG_KEY_DEFAULT_LANG, lang);
-    expect(storeMock.loadXWikiDoc(eqRefLang(mainDoc), same(getContext()))).andReturn(mainDoc);
-    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getContext()))).andReturn(doc);
+    expect(storeMock.loadXWikiDoc(eqRefLang(mainDoc), same(getXContext()))).andReturn(mainDoc);
+    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getXContext()))).andReturn(doc);
     replayDefault();
     XWikiDocument theDoc = modelAccess.getDocument(doc.getDocumentReference(), lang);
     verifyDefault();
-    assertSame(doc, theDoc);
+    assertNotSame(doc, theDoc);
   }
 
   @Test
@@ -204,11 +226,11 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
     XWikiDocument mainDoc = new XWikiDocument(doc.getDocumentReference());
     mainDoc.setNew(false);
     mainDoc.setDefaultLanguage(defaultLang);
-    doc.setLanguage("");
+    doc.setLanguage(lang);
     doc.setNew(true);
     getConfigurationSource().setProperty(ModelContext.CFG_KEY_DEFAULT_LANG, defaultLang);
-    expect(storeMock.loadXWikiDoc(eqRefLang(mainDoc), same(getContext()))).andReturn(mainDoc);
-    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getContext()))).andReturn(doc);
+    expect(storeMock.loadXWikiDoc(eqRefLang(mainDoc), same(getXContext()))).andReturn(mainDoc);
+    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getXContext()))).andReturn(doc);
     replayDefault();
     try {
       modelAccess.getDocument(doc.getDocumentReference(), lang);
@@ -228,12 +250,12 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
     mainDoc.setDefaultLanguage(defaultLang);
     doc.setLanguage(lang);
     getConfigurationSource().setProperty(ModelContext.CFG_KEY_DEFAULT_LANG, defaultLang);
-    expect(storeMock.loadXWikiDoc(eqRefLang(mainDoc), same(getContext()))).andReturn(mainDoc);
-    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getContext()))).andReturn(doc);
+    expect(storeMock.loadXWikiDoc(eqRefLang(mainDoc), same(getXContext()))).andReturn(mainDoc);
+    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getXContext()))).andReturn(doc);
     replayDefault();
     XWikiDocument theDoc = modelAccess.getDocument(doc.getDocumentReference(), lang);
     verifyDefault();
-    assertSame(doc, theDoc);
+    assertNotSame(doc, theDoc);
   }
 
   @Test
@@ -242,16 +264,51 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
     doc.setDefaultLanguage(lang);
     doc.setLanguage("");
     getConfigurationSource().setProperty(ModelContext.CFG_KEY_DEFAULT_LANG, lang);
-    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getContext()))).andReturn(doc);
+    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getXContext()))).andReturn(doc);
     replayDefault();
     XWikiDocument theDoc = modelAccess.getDocument(doc.getDocumentReference(), lang);
     verifyDefault();
-    assertSame(doc, theDoc);
+    assertNotSame(doc, theDoc);
+  }
+
+  @Test
+  public void test_getDocumentOpt_notExists() throws Exception {
+    doc.setNew(true);
+    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getXContext()))).andReturn(doc);
+    replayDefault();
+    assertTrue(modelAccess.getDocumentOpt(doc.getDocumentReference()).isEmpty());
+    verifyDefault();
+  }
+
+  @Test
+  public void test_getDocumentOpt_mainDocByDefaultLang() throws Exception {
+    String lang = "de";
+    doc.setDefaultLanguage(lang);
+    doc.setLanguage("");
+    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getXContext()))).andReturn(doc);
+    replayDefault();
+    assertTrue(modelAccess.getDocumentOpt(doc.getDocumentReference(), lang).isPresent());
+    verifyDefault();
+  }
+
+  @Test
+  public void test_getDocumentOpt_noTranslation() throws Exception {
+    String lang = "fr";
+    XWikiDocument mainDoc = new XWikiDocument(doc.getDocumentReference());
+    mainDoc.setNew(false);
+    mainDoc.setDefaultLanguage("de");
+    doc.setLanguage(lang);
+    doc.setNew(true);
+    expect(storeMock.loadXWikiDoc(eqRefLang(mainDoc), same(getXContext()))).andReturn(mainDoc);
+    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getXContext()))).andReturn(doc);
+    replayDefault();
+    assertTrue(modelAccess.getDocumentOpt(doc.getDocumentReference(), lang).isEmpty());
+    verifyDefault();
   }
 
   @Test
   public void test_createDocument() throws Exception {
-    expect(storeMock.exists(eqRefLang(doc), same(getContext()))).andReturn(false);
+    expect(storeMock.exists(eqRefLang(doc), same(getXContext()))).andReturn(false);
     replayDefault();
     XWikiDocument ret = modelAccess.createDocument(doc.getDocumentReference());
     verifyDefault();
@@ -268,9 +325,9 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
     transDoc.setLanguage(lang);
     transDoc.setNew(true);
     getConfigurationSource().setProperty(ModelContext.CFG_KEY_DEFAULT_LANG, lang);
-    expect(storeMock.exists(eqRefLang(doc), same(getContext()))).andReturn(true);
-    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getContext()))).andReturn(doc);
-    expect(storeMock.loadXWikiDoc(eqRefLang(transDoc), same(getContext()))).andReturn(transDoc);
+    expect(storeMock.exists(eqRef(doc), same(getXContext()))).andReturn(true);
+    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getXContext()))).andReturn(doc);
+    expect(storeMock.loadXWikiDoc(eqRefLang(transDoc), same(getXContext()))).andReturn(transDoc);
     replayDefault();
     XWikiDocument ret = modelAccess.createDocument(doc.getDocumentReference(), lang);
     verifyDefault();
@@ -281,7 +338,7 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
 
   @Test
   public void test_createDocument_alreadyExists() throws Exception {
-    expect(storeMock.exists(eqRefLang(doc), same(getContext()))).andReturn(true);
+    expect(storeMock.exists(eqRefLang(doc), same(getXContext()))).andReturn(true);
     replayDefault();
     try {
       modelAccess.createDocument(doc.getDocumentReference());
@@ -306,21 +363,21 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
   public void test_getOrCreateDocument_get() throws Exception {
     doc.setNew(false);
     doc.setFromCache(false);
-    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getContext()))).andReturn(doc);
+    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getXContext()))).andReturn(doc);
     replayDefault();
     XWikiDocument ret = modelAccess.getOrCreateDocument(doc.getDocumentReference());
     verifyDefault();
     assertEquals(doc, ret);
     assertFalse(ret.isNew());
     assertFalse(ret.isFromCache());
-    assertSame("do not clone if isNew", doc, ret);
+    assertNotSame(doc, ret);
     assertFalse(doc.isMetaDataDirty());
   }
 
   @Test
   public void test_getOrCreateDocument_get_failed() throws Exception {
     Throwable cause = new DocumentLoadException(doc.getDocumentReference());
-    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getContext()))).andThrow(cause);
+    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getXContext()))).andThrow(cause);
     replayDefault();
     try {
       modelAccess.getOrCreateDocument(doc.getDocumentReference());
@@ -334,7 +391,7 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
   @Test
   public void test_getOrCreateDocument_create() throws Exception {
     doc.setNew(true);
-    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getContext()))).andReturn(doc);
+    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getXContext()))).andReturn(doc);
     replayDefault();
     XWikiDocument ret = modelAccess.getOrCreateDocument(doc.getDocumentReference());
     verifyDefault();
@@ -355,7 +412,7 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
 
   @Test
   public void test_exists_true() throws Exception {
-    expect(storeMock.exists(eqRefLang(doc), same(getContext())))
+    expect(storeMock.exists(eqRefLang(doc), same(getXContext())))
         .andReturn(true);
     replayDefault();
     boolean ret = modelAccess.exists(doc.getDocumentReference());
@@ -365,7 +422,7 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
 
   @Test
   public void test_exists_false() throws Exception {
-    expect(storeMock.exists(eqRefLang(doc), same(getContext()))).andReturn(false);
+    expect(storeMock.exists(eqRef(doc), same(getXContext()))).andReturn(false);
     replayDefault();
     boolean ret = modelAccess.exists(doc.getDocumentReference());
     verifyDefault();
@@ -387,9 +444,9 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
     transDoc.setTranslation(1);
     transDoc.setLanguage(lang);
     transDoc.setNew(false);
-    expect(storeMock.exists(eqRefLang(doc), same(getContext()))).andReturn(true);
-    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getContext()))).andReturn(doc);
-    expect(storeMock.loadXWikiDoc(eqRefLang(transDoc), same(getContext()))).andReturn(transDoc);
+    expect(storeMock.exists(eqRefLang(doc), same(getXContext()))).andReturn(true);
+    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getXContext()))).andReturn(doc);
+    expect(storeMock.loadXWikiDoc(eqRefLang(transDoc), same(getXContext()))).andReturn(transDoc);
     replayDefault();
     boolean ret = modelAccess.existsLang(doc.getDocumentReference(), lang);
     verifyDefault();
@@ -399,8 +456,8 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
   @Test
   public void test_existsLang_isMainDoc() throws Exception {
     String lang = "en";
-    expect(storeMock.exists(eqRefLang(doc), same(getContext()))).andReturn(true);
-    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getContext()))).andReturn(doc);
+    expect(storeMock.exists(eqRefLang(doc), same(getXContext()))).andReturn(true);
+    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getXContext()))).andReturn(doc);
     replayDefault();
     boolean ret = modelAccess.existsLang(doc.getDocumentReference(), lang);
     verifyDefault();
@@ -414,9 +471,9 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
     transDoc.setTranslation(1);
     transDoc.setLanguage(lang);
     transDoc.setNew(true);
-    expect(storeMock.exists(eqRefLang(doc), same(getContext()))).andReturn(true);
-    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getContext()))).andReturn(doc);
-    expect(storeMock.loadXWikiDoc(eqRefLang(transDoc), same(getContext()))).andReturn(transDoc);
+    expect(storeMock.exists(eqRefLang(doc), same(getXContext()))).andReturn(true);
+    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getXContext()))).andReturn(doc);
+    expect(storeMock.loadXWikiDoc(eqRefLang(transDoc), same(getXContext()))).andReturn(transDoc);
     replayDefault();
     boolean ret = modelAccess.existsLang(doc.getDocumentReference(), lang);
     verifyDefault();
@@ -426,7 +483,7 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
   @Test
   public void test_existsLang_false_noMainDoc() throws Exception {
     String lang = "fr";
-    expect(storeMock.exists(eqRefLang(doc), same(getContext()))).andReturn(false);
+    expect(storeMock.exists(eqRefLang(doc), same(getXContext()))).andReturn(false);
     replayDefault();
     boolean ret = modelAccess.existsLang(doc.getDocumentReference(), lang);
     verifyDefault();
@@ -436,7 +493,7 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
   @Test
   public void test_existsLang_none() throws Exception {
     // empty lang instead of null
-    expect(storeMock.exists(eqRefLang(doc), same(getContext()))).andReturn(false);
+    expect(storeMock.exists(eqRefLang(doc), same(getXContext()))).andReturn(false);
     replayDefault();
     boolean ret = modelAccess.existsLang(doc.getDocumentReference(), null);
     verifyDefault();
@@ -467,10 +524,10 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
   public void test_saveDocument_create() throws Exception {
     doc.setNew(true);
     getMock(ObservationManager.class).notify(isA(DocumentCreatingEvent.class), same(doc),
-        same(getContext()));
-    storeMock.saveXWikiDoc(same(doc), same(getContext()));
+        same(getXContext()));
+    storeMock.saveXWikiDoc(same(doc), same(getXContext()));
     getMock(ObservationManager.class).notify(isA(DocumentCreatedEvent.class), eqRefLang(doc),
-        same(getContext()));
+        same(getXContext()));
     replayDefault();
     modelAccess.saveDocument(doc);
     verifyDefault();
@@ -480,8 +537,8 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
   public void test_saveDocument_saveException() throws Exception {
     Throwable cause = new XWikiException();
     getMock(ObservationManager.class).notify(isA(DocumentUpdatingEvent.class), same(doc),
-        same(getContext()));
-    storeMock.saveXWikiDoc(same(doc), same(getContext()));
+        same(getXContext()));
+    storeMock.saveXWikiDoc(same(doc), same(getXContext()));
     expectLastCall().andThrow(cause);
     replayDefault();
     try {
@@ -496,16 +553,16 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
   @Test
   public void test_saveDocument_checkAuthor() throws Exception {
     String username = "XWiki.TestUser";
-    getContext().setUser(username);
+    getXContext().setUser(username);
     doc.setAuthor("XWiki.OldAuthor");
     String oldCreator = "XWiki.OldCreator";
     doc.setCreator(oldCreator);
     Capture<XWikiDocument> docCapture = newCapture();
     getMock(ObservationManager.class).notify(isA(DocumentUpdatingEvent.class), same(doc),
-        same(getContext()));
-    storeMock.saveXWikiDoc(capture(docCapture), same(getContext()));
+        same(getXContext()));
+    storeMock.saveXWikiDoc(capture(docCapture), same(getXContext()));
     getMock(ObservationManager.class).notify(isA(DocumentUpdatedEvent.class), eqRefLang(doc),
-        same(getContext()));
+        same(getXContext()));
     doc.setMetaDataDirty(false);
     replayDefault();
     modelAccess.saveDocument(doc);
@@ -519,17 +576,17 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
   @Test
   public void test_saveDocument_checkAuthor_Creator_isNew() throws Exception {
     String username = "XWiki.TestUser";
-    getContext().setUser(username);
+    getXContext().setUser(username);
     doc.setNew(true);
     doc.setAuthor("XWiki.OldAuthor");
     String oldCreator = "XWiki.OldCreator";
     doc.setCreator(oldCreator);
     Capture<XWikiDocument> docCapture = newCapture();
     getMock(ObservationManager.class).notify(isA(DocumentCreatingEvent.class), same(doc),
-        same(getContext()));
-    storeMock.saveXWikiDoc(capture(docCapture), same(getContext()));
+        same(getXContext()));
+    storeMock.saveXWikiDoc(capture(docCapture), same(getXContext()));
     getMock(ObservationManager.class).notify(isA(DocumentCreatedEvent.class), eqRefLang(doc),
-        same(getContext()));
+        same(getXContext()));
     doc.setMetaDataDirty(false);
     replayDefault();
     modelAccess.saveDocument(doc);
@@ -601,7 +658,7 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
   public void test_saveDocument_translation() throws Exception {
     doc.setTranslation(1);
     doc.setLanguage("de");
-    expect(storeMock.exists(eqRefLang(doc), same(getContext()))).andReturn(true);
+    expect(storeMock.exists(eqRef(doc), same(getXContext()))).andReturn(true);
     expectSaveWithNotify(doc);
     replayDefault();
     modelAccess.saveDocument(doc);
@@ -612,7 +669,7 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
   public void test_saveDocument_translation_mainInexistent() throws Exception {
     doc.setTranslation(1);
     doc.setLanguage("de");
-    expect(storeMock.exists(eqRefLang(doc), same(getContext()))).andReturn(false);
+    expect(storeMock.exists(eqRef(doc), same(getXContext()))).andReturn(false);
     replayDefault();
     try {
       modelAccess.saveDocument(doc);
@@ -647,10 +704,10 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
 
   private void expectSaveWithNotify(XWikiDocument doc) throws XWikiException {
     getMock(ObservationManager.class).notify(isA(DocumentUpdatingEvent.class), same(doc),
-        same(getContext()));
-    storeMock.saveXWikiDoc(same(doc), same(getContext()));
+        same(getXContext()));
+    storeMock.saveXWikiDoc(same(doc), same(getXContext()));
     getMock(ObservationManager.class).notify(isA(DocumentUpdatedEvent.class), eqRefLang(doc),
-        same(getContext()));
+        same(getXContext()));
   }
 
   @Test
@@ -665,7 +722,7 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
   public void test_deleteDocumentInternal_totrash() throws Exception {
     expectDeleteWithNotify(doc);
     getMock(XWikiRecycleBinStoreInterface.class).saveToRecycleBin(
-        same(doc), eq("user"), geq(new Date()), same(getContext()), eq(true));
+        same(doc), eq("user"), geq(new Date()), same(getXContext()), eq(true));
     replayDefault();
     modelAccess.deleteDocumentInternal(doc, true);
     verifyDefault();
@@ -681,7 +738,7 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
 
   @Test
   public void test_deleteDocument_notExists() throws Exception {
-    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getContext()))).andReturn(doc);
+    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getXContext()))).andReturn(doc);
     doc.setNew(true);
     doc.setDefaultLanguage("de");
     replayDefault();
@@ -691,9 +748,9 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
 
   @Test
   public void test_deleteDocument() throws Exception {
-    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getContext()))).andReturn(doc);
-    expect(storeMock.getTranslationList(eqRefLang(doc), same(getContext())))
-        .andReturn(ImmutableList.of());
+    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getXContext()))).andReturn(doc);
+    expect(storeMock.getTranslationList(eqRefLang(doc), same(getXContext())))
+        .andReturn(List.of());
     doc.setNew(false);
     doc.setNew(false);
     doc.setDefaultLanguage("de");
@@ -704,20 +761,63 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
   }
 
   @Test
+  public void test_deleteDocument_crossWiki_notifiesInDocWiki() throws Exception {
+    getXContext().setDatabase("sourcewiki");
+    DocumentReference targetDocRef = new DocumentReference("subscriberwiki", "progonall", "perf");
+    XWikiDocument targetDoc = new XWikiDocument(targetDocRef);
+    targetDoc.setNew(false);
+    targetDoc.setDefaultLanguage("de");
+    targetDoc.setOriginalDocument(new XWikiDocument(targetDocRef));
+    targetDoc.getOriginalDocument().setNew(false);
+    expect(getMock(WikiService.class).hasWiki(new WikiReference("subscriberwiki")))
+        .andReturn(true).anyTimes();
+    expect(storeMock.loadXWikiDoc(eqRefLang(targetDoc), same(getXContext()))).andAnswer(() -> {
+      assertEquals("subscriberwiki", getXContext().getDatabase());
+      return targetDoc;
+    });
+    expect(storeMock.getTranslationList(eqRefLang(targetDoc), same(getXContext())))
+        .andAnswer(() -> {
+          assertEquals("subscriberwiki", getXContext().getDatabase());
+          return List.of();
+        });
+    getMock(ObservationManager.class)
+        .notify(isA(DocumentDeletingEvent.class), eqRefLang(targetDoc), same(getXContext()));
+    expectLastCall().andAnswer(() -> {
+      assertEquals("subscriberwiki", getXContext().getDatabase());
+      return null;
+    });
+    storeMock.deleteXWikiDoc(eqRefLang(targetDoc), same(getXContext()));
+    expectLastCall().andAnswer(() -> {
+      assertEquals("subscriberwiki", getXContext().getDatabase());
+      return null;
+    });
+    getMock(ObservationManager.class)
+        .notify(isA(DocumentDeletedEvent.class), eqRefLang(targetDoc), same(getXContext()));
+    expectLastCall().andAnswer(() -> {
+      assertEquals("subscriberwiki", getXContext().getDatabase());
+      return null;
+    });
+    replayDefault();
+    modelAccess.deleteDocument(targetDocRef, false);
+    verifyDefault();
+    assertEquals("sourcewiki", getXContext().getDatabase());
+  }
+
+  @Test
   public void test_deleteDocument_withTrans() throws Exception {
-    List<String> transLangs = ImmutableList.of("en", "fr", "it");
-    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getContext()))).andReturn(doc);
-    expect(storeMock.getTranslationList(eqRefLang(doc), same(getContext()))).andReturn(transLangs);
+    List<String> transLangs = List.of("en", "fr", "it");
+    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getXContext()))).andReturn(doc);
+    expect(storeMock.getTranslationList(eqRefLang(doc), same(getXContext()))).andReturn(transLangs);
     doc.setNew(false);
     doc.setDefaultLanguage("de");
     List<XWikiDocument> transDocs = transLangs.stream().map(lang -> {
       XWikiDocument transDoc = doc.clone();
       transDoc.setLanguage(lang);
       return transDoc;
-    }).collect(toImmutableList());
+    }).toList();
     for (XWikiDocument transDoc : transDocs) {
-      expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getContext()))).andReturn(doc);
-      expect(storeMock.loadXWikiDoc(eqRefLang(transDoc), same(getContext()))).andReturn(transDoc);
+      expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getXContext()))).andReturn(doc);
+      expect(storeMock.loadXWikiDoc(eqRefLang(transDoc), same(getXContext()))).andReturn(transDoc);
       expectDeleteWithNotify(transDoc);
     }
     expectDeleteWithNotify(doc);
@@ -734,8 +834,8 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
     transDoc.setNew(false);
     transDoc.setLanguage("fr");
     transDoc.setTranslation(1);
-    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getContext()))).andReturn(doc);
-    expect(storeMock.loadXWikiDoc(eqRefLang(transDoc), same(getContext()))).andReturn(transDoc);
+    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getXContext()))).andReturn(doc);
+    expect(storeMock.loadXWikiDoc(eqRefLang(transDoc), same(getXContext()))).andReturn(transDoc);
     expectDeleteWithNotify(transDoc);
     replayDefault();
     modelAccess.deleteTranslation(doc.getDocumentReference(), "fr", false);
@@ -750,8 +850,8 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
     transDoc.setNew(false);
     transDoc.setLanguage("fr");
     transDoc.setTranslation(0);
-    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getContext()))).andReturn(doc);
-    expect(storeMock.loadXWikiDoc(eqRefLang(transDoc), same(getContext()))).andReturn(transDoc);
+    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getXContext()))).andReturn(doc);
+    expect(storeMock.loadXWikiDoc(eqRefLang(transDoc), same(getXContext()))).andReturn(transDoc);
     replayDefault();
     assertThrows(DocumentDeleteException.class,
         () -> modelAccess.deleteTranslation(doc.getDocumentReference(), "fr", false));
@@ -759,17 +859,17 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
   }
 
   private void expectDeleteWithNotify(XWikiDocument doc) throws XWikiException {
-    getMock(ObservationManager.class).notify(isA(DocumentDeletingEvent.class), same(doc),
-        same(getContext()));
-    storeMock.deleteXWikiDoc(same(doc), same(getContext()));
+    getMock(ObservationManager.class).notify(isA(DocumentDeletingEvent.class), eqRefLang(doc),
+        same(getXContext()));
+    storeMock.deleteXWikiDoc(eqRefLang(doc), same(getXContext()));
     getMock(ObservationManager.class).notify(isA(DocumentDeletedEvent.class), eqRefLang(doc),
-        same(getContext()));
+        same(getXContext()));
   }
 
   @Test
   public void test_getTranslationLangs() throws Exception {
-    List<String> langs = ImmutableList.of("de", "en");
-    expect(storeMock.getTranslationList(eqRefLang(doc), same(getContext()))).andReturn(langs);
+    List<String> langs = List.of("de", "en");
+    expect(storeMock.getTranslationList(eqRefLang(doc), same(getXContext()))).andReturn(langs);
     replayDefault();
     List<String> ret = modelAccess.getTranslationLangs(doc.getDocumentReference());
     verifyDefault();
@@ -778,8 +878,8 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
 
   @Test
   public void test_getTranslationLangs_none() throws Exception {
-    List<String> langs = ImmutableList.of();
-    expect(storeMock.getTranslationList(eqRefLang(doc), same(getContext()))).andReturn(langs);
+    List<String> langs = List.of();
+    expect(storeMock.getTranslationList(eqRefLang(doc), same(getXContext()))).andReturn(langs);
     replayDefault();
     List<String> ret = modelAccess.getTranslationLangs(doc.getDocumentReference());
     verifyDefault();
@@ -789,7 +889,7 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
   @Test
   public void test_getTranslationLangs_DLE() throws Exception {
     DocumentReference docRef = doc.getDocumentReference();
-    expect(storeMock.getTranslationList(eqRefLang(doc), same(getContext())))
+    expect(storeMock.getTranslationList(eqRefLang(doc), same(getXContext())))
         .andThrow(new XWikiException());
     replayDefault();
     assertThrows(DocumentLoadException.class, () -> modelAccess.getTranslationLangs(docRef));
@@ -798,41 +898,41 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
 
   @Test
   public void test_getTranslations() throws Exception {
-    List<String> transLangs = ImmutableList.of("en", "fr", "it");
-    expect(storeMock.getTranslationList(eqRefLang(doc), same(getContext()))).andReturn(transLangs);
+    List<String> transLangs = List.of("en", "fr", "it");
+    expect(storeMock.getTranslationList(eqRefLang(doc), same(getXContext()))).andReturn(transLangs);
     doc.setNew(false);
     doc.setDefaultLanguage("de");
     List<XWikiDocument> transDocs = transLangs.stream().map(lang -> {
       XWikiDocument transDoc = doc.clone();
       transDoc.setLanguage(lang);
       return transDoc;
-    }).collect(toImmutableList());
+    }).toList();
     for (XWikiDocument transDoc : transDocs) {
-      expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getContext()))).andReturn(doc);
-      expect(storeMock.loadXWikiDoc(eqRefLang(transDoc), same(getContext()))).andReturn(transDoc);
+      expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getXContext()))).andReturn(doc);
+      expect(storeMock.loadXWikiDoc(eqRefLang(transDoc), same(getXContext()))).andReturn(transDoc);
     }
     replayDefault();
     Map<String, XWikiDocument> ret = modelAccess.getTranslations(doc.getDocumentReference());
     verifyDefault();
     assertEquals(transLangs.size(), ret.size());
     for (XWikiDocument langDoc : transDocs) {
-      assertSame(langDoc, ret.get(langDoc.getLanguage()));
+      assertNotSame(langDoc, ret.get(langDoc.getLanguage()));
     }
   }
 
   @Test
   public void test_getTranslations_notExists() throws Exception {
     String transLang = "fr";
-    expect(storeMock.getTranslationList(eqRefLang(doc), same(getContext())))
-        .andReturn(ImmutableList.of(transLang));
+    expect(storeMock.getTranslationList(eqRefLang(doc), same(getXContext())))
+        .andReturn(List.of(transLang));
     XWikiDocument mainDoc = new XWikiDocument(doc.getDocumentReference());
     mainDoc.setNew(false);
     mainDoc.setDefaultLanguage("de");
-    expect(storeMock.loadXWikiDoc(eqRefLang(mainDoc), same(getContext()))).andReturn(mainDoc);
+    expect(storeMock.loadXWikiDoc(eqRefLang(mainDoc), same(getXContext()))).andReturn(mainDoc);
     XWikiDocument transDoc = mainDoc.clone();
     transDoc.setNew(true);
     transDoc.setLanguage(transLang);
-    expect(storeMock.loadXWikiDoc(eqRefLang(transDoc), same(getContext()))).andReturn(transDoc);
+    expect(storeMock.loadXWikiDoc(eqRefLang(transDoc), same(getXContext()))).andReturn(transDoc);
     replayDefault();
     Map<String, XWikiDocument> ret = modelAccess.getTranslations(doc.getDocumentReference());
     verifyDefault();
@@ -842,7 +942,7 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
   @Test
   public void test_getTranslations_DLE() throws Exception {
     DocumentReference docRef = doc.getDocumentReference();
-    expect(storeMock.getTranslationList(eqRefLang(doc), same(getContext())))
+    expect(storeMock.getTranslationList(eqRefLang(doc), same(getXContext())))
         .andThrow(new XWikiException());
     replayDefault();
     assertThrows(DocumentLoadException.class, () -> modelAccess.getTranslations(docRef));
@@ -875,7 +975,7 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
     List<XWikiDocument> parents = modelAccess.streamParents(doc).collect(toList());
     verifyDefault();
     assertEquals(1, parents.size());
-    assertSame(pDoc, parents.get(0));
+    assertNotSame(pDoc, parents.get(0));
   }
 
   @Test
@@ -887,16 +987,16 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
     List<XWikiDocument> parents = modelAccess.streamParents(doc).collect(toList());
     verifyDefault();
     assertEquals(2, parents.size());
-    assertSame(pDoc, parents.get(0));
-    assertSame(ppDoc, parents.get(1));
+    assertNotSame(pDoc, parents.get(0));
+    assertNotSame(ppDoc, parents.get(1));
   }
 
   @Test
   public void test_streamParents_cyclic() throws Exception {
     XWikiDocument pDoc = expectParent(doc, true);
     pDoc.setParentReference((EntityReference) doc.getDocumentReference());
-    expect(storeMock.exists(eqRefLang(doc), same(getContext()))).andReturn(true);
-    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getContext()))).andReturn(doc);
+    expect(storeMock.exists(eqRefLang(doc), same(getXContext()))).andReturn(true);
+    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getXContext()))).andReturn(doc);
     replayDefault();
     Stream<XWikiDocument> stream = modelAccess.streamParents(doc);
     assertThrows(IllegalStateException.class, stream::count);
@@ -910,10 +1010,10 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
     XWikiDocument parentDoc = new XWikiDocument(parentDocRef);
     parentDoc.setNew(!exists);
     doc.setParentReference((EntityReference) parentDocRef);
-    expect(storeMock.exists(eqRefLang(parentDoc), same(getContext())))
+    expect(storeMock.exists(eqRefLang(parentDoc), same(getXContext())))
         .andReturn(exists).atLeastOnce();
     if (exists) {
-      expect(storeMock.loadXWikiDoc(eqRefLang(parentDoc), same(getContext())))
+      expect(storeMock.loadXWikiDoc(eqRefLang(parentDoc), same(getXContext())))
           .andReturn(parentDoc);
     }
     return parentDoc;
@@ -1033,7 +1133,7 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
 
   @Test
   public void test_getXObjects_docRef() throws Exception {
-    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getContext()))).andReturn(doc);
+    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getXContext()))).andReturn(doc);
     replayDefault();
     List<BaseObject> ret = modelAccess.getXObjects(doc.getDocumentReference(), classRef);
     verifyDefault();
@@ -1082,7 +1182,7 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
     XWikiDocument docMock = createDocMock(doc.getDocumentReference());
     expectDefaultLang(docMock);
     BaseObject obj = createObj(classRef);
-    expect(docMock.newXObject(eq(classRef), same(getContext()))).andReturn(obj).once();
+    expect(docMock.newXObject(eq(classRef), same(getXContext()))).andReturn(obj).once();
     replayDefault();
     BaseObject ret = modelAccess.newXObject(docMock, classRef);
     verifyDefault();
@@ -1094,7 +1194,7 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
     Throwable cause = new XWikiException();
     XWikiDocument docMock = createDocMock(doc.getDocumentReference());
     expectDefaultLang(docMock);
-    expect(docMock.newXObject(eq(classRef), same(getContext()))).andThrow(cause).once();
+    expect(docMock.newXObject(eq(classRef), same(getXContext()))).andThrow(cause).once();
     replayDefault();
     try {
       modelAccess.newXObject(docMock, classRef);
@@ -1110,7 +1210,7 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
     XWikiDocument docMock = createDocMock(doc.getDocumentReference());
     expectDefaultLang(docMock);
     BaseObject obj = createObj(classRef);
-    expect(docMock.newXObject(eq(classRef), same(getContext()))).andReturn(obj).once();
+    expect(docMock.newXObject(eq(classRef), same(getXContext()))).andReturn(obj).once();
     classRef = new DocumentReference("otherWiki",
         classRef.getLastSpaceReference().getName(), classRef.getName());
     replayDefault();
@@ -1311,7 +1411,7 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
     String val = "val";
     addObj(field.getClassReference().getDocRef(), field.getName(), val);
 
-    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getContext()))).andReturn(doc);
+    expect(storeMock.loadXWikiDoc(eqRefLang(doc), same(getXContext()))).andReturn(doc);
 
     replayDefault();
     String ret = modelAccess.getProperty(doc.getDocumentReference(), field);
@@ -1325,7 +1425,7 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
     String val = "val";
     addObj(field.getClassReference().getDocRef(), field.getName(), val);
     replayDefault();
-    Optional<String> ret = modelAccess.getFieldValue(doc, field);
+    var ret = modelAccess.getFieldValue(doc, field);
     verifyDefault();
     assertNotNull(ret);
     assertTrue(ret.isPresent());
@@ -1336,7 +1436,7 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
     ClassField<String> field = new StringField.Builder(CLASS_REF, "name").build();
     addObj(field.getClassReference().getDocRef(), field.getName(), null);
     replayDefault();
-    Optional<String> ret = modelAccess.getFieldValue(doc, field);
+    var ret = modelAccess.getFieldValue(doc, field);
     verifyDefault();
     assertNotNull(ret);
     assertFalse(ret.isPresent());
@@ -1347,7 +1447,7 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
     String val = "val";
     addObj(field.getClassReference().getDocRef(), field.getName(), null);
     replayDefault();
-    Optional<String> ret = modelAccess.getFieldValue(doc.getDocumentReference(), field);
+    var ret = modelAccess.getFieldValue(doc.getDocumentReference(), field);
     verifyDefault();
     assertNotNull(ret);
     assertTrue(ret.isPresent());
@@ -1358,7 +1458,7 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
     ClassField<String> field = new StringField.Builder(CLASS_REF, "name").build();
     addObj(field.getClassReference().getDocRef(), field.getName(), null);
     replayDefault();
-    Optional<String> ret = modelAccess.getFieldValue(doc.getDocumentReference(), field);
+    var ret = modelAccess.getFieldValue(doc.getDocumentReference(), field);
     verifyDefault();
     assertNotNull(ret);
     assertFalse(ret.isPresent());
@@ -1369,7 +1469,7 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
     String val = "val";
     addObj(field.getClassReference().getDocRef(), field.getName(), val);
     replayDefault();
-    Optional<String> ret = modelAccess.getFieldValue(doc, field, "test");
+    var ret = modelAccess.getFieldValue(doc, field, "test");
     verifyDefault();
     assertNotNull(ret);
     assertTrue(ret.isPresent());
@@ -1380,7 +1480,7 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
     ClassField<String> field = new StringField.Builder(CLASS_REF, "name").build();
     addObj(field.getClassReference().getDocRef(), field.getName(), null);
     replayDefault();
-    Optional<String> ret = modelAccess.getFieldValue(doc, field, "test");
+    var ret = modelAccess.getFieldValue(doc, field, "test");
     verifyDefault();
     assertNotNull(ret);
     assertFalse(ret.isPresent());
@@ -1391,7 +1491,7 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
     String val = "test";
     addObj(field.getClassReference().getDocRef(), field.getName(), val);
     replayDefault();
-    Optional<String> ret = modelAccess.getFieldValue(doc, field, "test");
+    var ret = modelAccess.getFieldValue(doc, field, "test");
     verifyDefault();
     assertNotNull(ret);
     assertFalse(ret.isPresent());
@@ -1402,7 +1502,7 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
     String val = "val";
     addObj(field.getClassReference().getDocRef(), field.getName(), val);
     replayDefault();
-    Optional<String> ret = modelAccess.getFieldValue(doc.getDocumentReference(), field, "test");
+    var ret = modelAccess.getFieldValue(doc.getDocumentReference(), field, "test");
     verifyDefault();
     assertNotNull(ret);
     assertTrue(ret.isPresent());
@@ -1413,7 +1513,7 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
     ClassField<String> field = new StringField.Builder(CLASS_REF, "name").build();
     addObj(field.getClassReference().getDocRef(), field.getName(), null);
     replayDefault();
-    Optional<String> ret = modelAccess.getFieldValue(doc.getDocumentReference(), field, "test");
+    var ret = modelAccess.getFieldValue(doc.getDocumentReference(), field, "test");
     verifyDefault();
     assertNotNull(ret);
     assertFalse(ret.isPresent());
@@ -1424,7 +1524,7 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
     String val = "test";
     addObj(field.getClassReference().getDocRef(), field.getName(), val);
     replayDefault();
-    Optional<String> ret = modelAccess.getFieldValue(doc.getDocumentReference(), field, "test");
+    var ret = modelAccess.getFieldValue(doc.getDocumentReference(), field, "test");
     verifyDefault();
     assertNotNull(ret);
     assertFalse(ret.isPresent());
@@ -1575,7 +1675,7 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
   @Test
   public void test_setProperty_getProperty_customField() throws Exception {
     ClassField<DocumentReference> field = FIELD_MY_DOCREF;
-    DocumentReference toStoreRef = new DocumentReference("myDB", "mySpace", "myDoc");
+    DocumentReference toStoreRef = new DocumentReference("mydb", "mySpace", "myDoc");
 
     BaseClass bClass = expectNewBaseObject(field.getClassReference().getDocRef());
     expectPropertyClass(bClass, field.getName(), new StringClass());
@@ -1695,15 +1795,19 @@ public class DefaultModelAccessFacadeTest extends AbstractComponentTest {
     return cmp(doc, DocRefLangComparator.INSTANCE, LogicalOperator.EQUAL);
   }
 
+  private static XWikiDocument eqRef(XWikiDocument doc) {
+    return cmp(doc, (first, second) -> Objects.equals(first.getDocumentReference(),
+        second.getDocumentReference()) ? 0 : 1, LogicalOperator.EQUAL);
+  }
+
   private static class DocRefLangComparator implements Comparator<XWikiDocument> {
 
     static final DocRefLangComparator INSTANCE = new DocRefLangComparator();
 
     @Override
     public int compare(XWikiDocument o1, XWikiDocument o2) {
-      return ((o1 != o2)
-          && Objects.equals(o1.getDocumentReference(), o2.getDocumentReference())
-          && Objects.equals(o1.getLanguage(), o1.getLanguage()))
+      return (Objects.equals(o1.getDocumentReference(), o2.getDocumentReference())
+          && Objects.equals(o1.getLanguage(), o2.getLanguage()))
               ? 0
               : 1;
     }
